k8s-specification/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deployment
  template:
    metadata:
      labels:
        app: backend-deployment
    spec:
      containers:
        - name: backend-deployment
          image: instamunchbackend.azurecr.io/instamunchbackend:106
          ports:
            - containerPort: 3001
      imagePullSecrets:
      - name: acr-secret-backend
