k8s-specification/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: insta-frontend
  name: insta-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insta-frontend
  template:
    metadata:
      labels:
        app: insta-frontend
    spec:
      containers:
      - image: instamunch.azurecr.io/instamunch:71
        name: insta-frontend
        ports:
        - containerPort: 3000
          name: insta-frontend
      imagePullSecrets:
      - name: acr-secret-instamunch
