k8s-specification/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-deployment
spec:
  type: NodePort
  selector:
    app: backend-deployment
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 31001
