k8s-specification/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: insta-frontend
  name: insta-frontend
spec:
  type: NodePort
  ports:
  - name: "insta-frontend-service"
    port: 5000
    targetPort: 80
    nodePort: 31000
  selector:
    app: insta-frontend
