k8s-specification/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: Instamunch.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: insta-frontend 
            port:
              number: 3000
